Fixed typo on composer.json
Replace namespace "Codenom\\Xendit\\Provider\\XenditServiceProvider" to "Codenom\\Xendit\\Providers\\XenditServiceProvider"

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Codenom\\Xendit\\Provider\\XenditServiceProvider"
+                "Codenom\\Xendit\\Providers\\XenditServiceProvider"
             ]
         }
     }
